# kitchen

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cmake-build-release.sh
.devcontainer/: Dockerfile  devcontainer.json
src/: CMakeLists.txt
src/appetizer/: CMakeLists.txt  main.cpp  main.h
src/saladbar/: CMakeLists.txt
